Set user permissions

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
-      <li><%= link_to 'ผลิตภัณฑ์', pages_product_path %></li>
+      <li><%= link_to 'ผลิตภัณฑ์', listings_path %></li>
       <li><%= link_to 'เกี่ยวกับเรา', pages_about_path %></li>
       <li><%= link_to 'ติดต่อเรา', pages_contact_path %></li>
       <li><%= link_to 'ร่วมงานกับเรา' %></li>
