--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -28,8 +28,20 @@
 
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
-          <li><%= link_to 'แก้ไขข้อมูล', edit_user_registration_path %></li>
-          <li><%= link_to 'ออกจากระบบ', destroy_user_session_path, method: :delete %></li>
+      <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Seller Account<b class="caret"></b></a>
+          <ul class="dropdown-menu" >
+            <li><%= link_to 'จัดการสินค้าส่วนตัว', seller_path %></li>
+            <li><%= link_to 'แก้ไขข้อมูล', edit_user_registration_path %></li>
+          </ul>
+        </li>
+
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <%= current_user.name %><b class="caret"></b></a>
+          <ul class="dropdown-menu" >
+            <li><%= link_to 'ออกจากระบบ', destroy_user_session_path, method: :delete %></li>
+          </ul>
+        </li>
       <% else %>
           <li><%= link_to 'เข้าสู่ระบบ', new_user_session_path %></li>
           <li><%= link_to 'สมัครสมากชิก', new_user_registration_path %></li>    
