--- a/app/views/listings/seller.html.erb
+++ b/app/views/listings/seller.html.erb
@@ -7,6 +7,10 @@
         <h4><%= listing.name %></h4>
         <p><%= number_to_currency(listing.price) %></p>
         <p><%= "Sold by #{listing.user.name}" %></p>
+        <% if (user_signed_in?) && (current_user == listing.user) %>
+          <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
+          <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
+        <% end %>
       </div>
     </div>
   </div>
@@ -16,5 +20,5 @@
 <br>
 
 <% if user_signed_in? %>
-  <%= link_to 'New Listing', new_listing_path, class: "btn btn-link", data: {no_turbolink: true} %>
+  <%= link_to 'New Listing', new_listing_path, class: "btn btn-link" %>
 <% end %>
