--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,10 +1,15 @@
 <div class="jumbotron">
 	<div class="container">
-		<h2>ยินดีต้อนรับ</h2>
-		<p>สมัครสมากชิกรับทันทีส่วนลด 10 %</p>
 		<% unless user_signed_in? %>
+			<h2>ยินดีต้อนรับ</h2>
+			<p>สมัครสมากชิกรับทันทีส่วนลด 10 %</p>
 			<%= link_to 'สมัครสมากชิก', new_user_registration_path, class: "btn btn-primary" %>
 		<% end %>
-
-	</div>
+		
+		<% if user_signed_in? %>
+			<h2><%= "ยินดีต้อนรับ  #{current_user.name}" %></h2>
+		<% end %>
 </div>
+</div>
+
+
