--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -39,6 +39,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <%= current_user.name %><b class="caret"></b></a>
           <ul class="dropdown-menu" >
+            <li><%= link_to "Sales History", sales_path %></li>
+            <li><%= link_to "Purchase History", purchases_path %></li>
             <li><%= link_to 'ออกจากระบบ', destroy_user_session_path, method: :delete %></li>
           </ul>
         </li>
