--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -7,7 +7,7 @@
 		<% end %>
 		
 		<% if user_signed_in? %>
-			<h2><%= "ยินดีต้อนรับ  #{current_user.name}" %></h2>
+			<h2><%= "WELCOME  #{current_user.name}" %></h2>
 		<% end %>
 </div>
 </div>
